--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,14 +1,10 @@
 .sidebar{
     position:sticky;
-    top:80px;
-    flex: 0.2;
+    top: 80px;
+    flex: 0.2   ;
     border-radius: 10px;
     text-align: center;
     height:fit-content;
-}
-
-.sidebar__avatar{
-    margin-bottom: 10px;
 }
 
 .sidebar__top{
@@ -23,10 +19,86 @@
     background-color: white;
 }
 
+.sidebar__avatar{
+    margin-bottom: 10px;
+}
+
 .sidebar__top> img{
     margin-bottom: -20px;
     width: 100%;
     height:60px;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
+    object-fit: cover;
+}
+
+.sidebar__top>h2 {
+    font-size: 18px;
+}
+
+.sidebar__top>h4{
+    font-size: 14px;
+    color: grey ;
+}
+
+.sidebar__stats{
+    border: 1px solid lightgrey;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    padding: 10px;
+    background-color: white;
+    margin-bottom: 10px;
+
+}
+
+.sidebar__stat{
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.sidebar__stat > p{
+    color: grey;
+    font-size: 13px;    
+    font-weight: 600;
+}
+
+.sidebar__statNumber{
+    color: #0a66c2 !important;
+    font-weight: bold;
+}
+
+.sidebar__bottom{
+    text-align: left;
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid lightgrey;
+    background-color: white;
+}
+
+.sidebar__bottom > p{
+    font-size: 13px;
+    padding-bottom: 10px;
+}
+
+.sidebar__recentItem{
+    display: flex;
+    font-size:13px ;
+    font-weight: bolder;
+    color: grey;
+    cursor: pointer;
+    padding: 5px
+}
+
+.sidebar__recentItem:hover{
+    background-color:whitesmoke ;
+    color:black;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.sidebar__hash{
+    margin-right: 10px;
+    margin-left: 5px;
 }
